# Maktabtool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Author.h  Bok.cpp  Bok.h  CMakeLists.txt  File.cpp  File.h  Log.cpp  Log.h  main.cpp
